k8s/gaming/grimoire/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grimoire
  namespace: grimoire
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: grimoire
